# polars-poly-distance

./: .gitignore  Cargo.toml  Makefile  benchmark.py  dataset.py  frechet.py  groups.py  minirocket.py  overlap_test.py  poly_dist  pyproject.toml
benches/: benchmark.rs
pg/: __init__.py
ppd/: __init__.py
src/: expressions.rs  lib.rs
tests/: test_pig_latinnify.py
