[package]
name = "pg"
version = "0.1.0"
edition = "2021"

[lib]
name = "pg"
crate-type= ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.0", features = ["extension-module", "abi3-py39"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.46.0", default-features = false }
polars-arrow = { version = "0.46.0", default-features = false }
curve_similarities = "0.1.0"
approx = "0.3.2"
ndarray = "0.15.0"
ndarray-stats = "0.5.1"
num = "0.4.3"
flame = "0.2"